# cpptest

./: .gitignore  CMakeLists.txt  Makefile
cmake/: FindR.cmake  FindRPackage.cmake
extras/: CMakeLists.txt
extras/r_bindings/: CMakeLists.txt
extras/r_bindings/cpptest/: DESCRIPTION  DESCRIPTION.in  LICENSE.md.in
extras/r_bindings/cpptest/R/: cpptest-package.R  fun.R
extras/r_bindings/cpptest/src/: Makevars  cpptestr.cpp
include/cpptest/: cpptest.hpp
src/: CMakeLists.txt  cpptest.cpp  main.cpp
src/cpptest/: CMakeLists.txt  test.cpp  test.hpp
tests/: test.cpp
